--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
     "react-notifications-component": "^3.1.0",
+    "react-quill": "^2.0.0-beta.4",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.3.0",
